--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Kenan Baylan's Personal Website</title>
+    <script src="js/controller.js"></script>
 </head>
 
+
 <body>
-    <h1>Hello World</h1 </body>
+
+
+    <main>
+        <h1>Kenan Baylan Portfolio</h1>
+        <h1>Hello world</h1>
+    </main>
+
+</body>
 
 </html>
