--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <link rel="stylesheet" href="/Css/styles.css"> <!--Css dosyası eklendi..-->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,10 +14,87 @@
 <body>
 
 
-    <main>
-        <h1>Kenan Baylan Portfolio</h1>
-        <h1>Hello world</h1>
-    </main>
+    <table class="center">
+        <tr>
+            <td>Cengiz Kuroğlu - Küllenen aşk </td>
+            <td>Müslüm Gürses - Affet </td>
+
+        </tr>
+        <tr>
+
+            <td>Bergen - Seni kalbimden kovdum.</td>
+            <td>Güllü - Sabah olmadan </td>
+
+        <tr>
+
+            <td>Cem karaca - Tamirci Ciragi </td>
+            <td>Barış Manco - Unutamadım </td>
+        </tr>
+
+
+        </tr>
+
+    </table>
+    <!-- 
+    <div class="generalBody">
+        <tr>
+            <td colspan="5">
+                <img src="/Images/Michaelcoreleone.jpg" alt="michaelCorleone" class="center"
+                    style="width: 300; height: 400;">
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <h1>Michael Corleone</h1>
+            </td>
+        <tr>
+            <td><strong>Marmara Üniversitesi Teknoloji Fakültesi</strong></td>
+        </tr>
+        <tr>
+            <div class="home__social">
+                <a href="" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
+                <a href="" class="home__social-icon"><i class='bx bxl-behance'></i></a>
+                <a href="" class="home__social-icon"><i class='bx bxl-github'></i></a>
+            </div>
+
+        </tr>
+        <td colspan="2">
+            <div>Michael was enrolled at Dartmouth College, but dropped out to enlist in the United States Marine Corps
+                the day after the attack on Pearl Harbor. During World War II, he fights in the Pacific War, and is
+                wounded in battle.
+                </br>
+                Michael Corleone is a fictional character and the protagonist of Mario Puzo's 1969 novel The Godfather.
+                In the three Godfather films, directed by Francis Ford Coppola, Michael was portrayed by Al Pacino, for
+                which he was twice-nominated for Academy Awards. Michael is the youngest son of Vito Corleone, a
+                Sicilian immigrant who builds a Mafia empire. Upon his father's death, Michael succeeds him as the don
+                of the Corleone crime family.
+
+                </br>
+            </div>
+        </td>
+        </tr>
+        </table>
+
+        <!-- <div class="home bd-grid" id="home">
+        <div class="home__data">
+            <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Coding Master</span><br> Web Developer
+            </h1>
+
+            <a href="#" class="button">Contact</a>
+        </div>
+
+        <div class="home__social">
+            <a href="" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
+            <a href="" class="home__social-icon"><i class='bx bxl-behance'></i></a>
+            <a href="" class="home__social-icon"><i class='bx bxl-github'></i></a>
+        </div>
+
+        <div class="home__img">
+            <img src="/Images/Michaelcoreleone.jpg" alt="">
+        </div>
+    -->
+
+    </div>
 
 </body>
 
