--- a/index.html
+++ b/index.html
@@ -16,19 +16,20 @@
 
     <table class="center">
         <tr>
-            <td>Cengiz Kuroğlu - Küllenen aşk </td>
-            <td>Müslüm Gürses - Affet </td>
+            <td>deneme</td>
+            <td>deneme2 </td>
 
         </tr>
         <tr>
 
-            <td>Bergen - Seni kalbimden kovdum.</td>
-            <td>Güllü - Sabah olmadan </td>
+
+            <td>deneme</td>
+            <td>deneme2 </td>
 
         <tr>
 
-            <td>Cem karaca - Tamirci Ciragi </td>
-            <td>Barış Manco - Unutamadım </td>
+            <td>deneme</td>
+            <td>deneme2 </td>
         </tr>
 
 
