--- a/index.html
+++ b/index.html
@@ -1,101 +1,103 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
 
 <head>
-    <link rel="stylesheet" href="/Css/styles.css"> <!--Css dosyası eklendi..-->
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kenan Baylan's Personal Website</title>
-    <script src="js/controller.js"></script>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <title>Profile</title>
+    <link rel="stylesheet" href="./css/app.css" />
+    <script src="./js/index.js"></script>
 </head>
-
 
 <body>
 
-
-    <table class="center">
-        <tr>
-            <td>deneme</td>
-            <td>deneme2 </td>
-
-        </tr>
-        <tr>
-
-
-            <td>deneme</td>
-            <td>deneme2 </td>
-
-        <tr>
-
-            <td>deneme</td>
-            <td>deneme2 </td>
-        </tr>
-
-
-        </tr>
-
-    </table>
-    <!-- 
-    <div class="generalBody">
-        <tr>
-            <td colspan="5">
-                <img src="/Images/Michaelcoreleone.jpg" alt="michaelCorleone" class="center"
-                    style="width: 300; height: 400;">
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <h1>Michael Corleone</h1>
-            </td>
-        <tr>
-            <td><strong>Marmara Üniversitesi Teknoloji Fakültesi</strong></td>
-        </tr>
-        <tr>
-            <div class="home__social">
-                <a href="" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
-                <a href="" class="home__social-icon"><i class='bx bxl-behance'></i></a>
-                <a href="" class="home__social-icon"><i class='bx bxl-github'></i></a>
+    <section class="body-text">
+        <div class="main-container">
+            <div class="side-container">
+                <div class="photo-container">
+                    <img id="profile-img" src="./Images//profile.jpeg" alt="Kenan Baylan" />
+                </div>
+                <div>
+                    <h1>Reach out to me </h1>
+                    <p>
+                        <a class="image-style" href="https://www.linkedin.com/in/kenan-b-756ba8206/" target="blank"><img
+                                align="center" src="https://cdn.jsdelivr.net/npm/simple-icons@3.0.1/icons/linkedin.svg"
+                                alt="Kenan Baylan" height="30" width="40" /></a>
+                        <a class="image-style" href="mailto: kenan.baylan4654@gmail.com"><img align="center"
+                                src="https://simpleicons.org/icons/gmail.svg" height="30" width="40" /></a>
+                        <a class="image-style"
+                            href="https://stackoverflow.com/users/14736137/kenan-baylan?tab=profile"><img align="center"
+                                src="https://simpleicons.org/icons/stackoverflow.svg" height="30" width="40" /></a>
+                        <a class="image-style" href="  https://medium.com/@kenan.baylan4654"><img align="center"
+                                src="https://simpleicons.org/icons/medium.svg" height="30" width="40" /></a>
+                    </p>
+                </div>
             </div>
 
-        </tr>
-        <td colspan="2">
-            <div>Michael was enrolled at Dartmouth College, but dropped out to enlist in the United States Marine Corps
-                the day after the attack on Pearl Harbor. During World War II, he fights in the Pacific War, and is
-                wounded in battle.
-                </br>
-                Michael Corleone is a fictional character and the protagonist of Mario Puzo's 1969 novel The Godfather.
-                In the three Godfather films, directed by Francis Ford Coppola, Michael was portrayed by Al Pacino, for
-                which he was twice-nominated for Academy Awards. Michael is the youngest son of Vito Corleone, a
-                Sicilian immigrant who builds a Mafia empire. Upon his father's death, Michael succeeds him as the don
-                of the Corleone crime family.
+            <div class="content-container">
+                <div class="sub-content">
+                    <h1>Kenan Baylan</h1>
 
-                </br>
+                </div>
+                <div class="sub-content">
+                    <h3>Summary</h3>
+                    </>
+                    <p>
+                        Hello, I'm Kenan, a 3rd year Computer Engineering student at Marmara University.
+                        I have learned many programming languages and algorithms throughout my school life, although I
+                        am not an expert in many of them, I have gained knowledge in every field. Frontend, Backend,
+                        Mobile Apps. , AL, ML etc.
+                        I love mobile application development and I am improving myself in mobile programming.
+                        I am currently continuing my education life and I am working on Swift programming language to be
+                        an ios developer.
+                    </p>
+                </div>
+                <div class="sub-content">
+                    <h2>Tech Use</h2>
+                    <div class="sub-title">
+
+                        <img class="image-style" align="left"
+                            src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/swift/swift-original.svg" width="40"
+                            height="40" />
+                        <img class="image-style" align="left"
+                            src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/javascript/javascript.png"
+                            width="40" height="40" />
+                        <img class="image-style" align="left"
+                            src="https://raw.githubusercontent.com/jmnote/z-icons/master/svg/python.svg" width="40"
+                            height="40" />
+                        <img class="image-style"
+                            src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-plain-wordmark.svg"
+                            width="40" height="40" align="left" />
+                        <img class="image-style" align="left"
+                            src="https://raw.githubusercontent.com/jmnote/z-icons/master/svg/c.svg" width="40"
+                            height="40" />
+                        <img class="image-style" align="left"
+                            src="https://raw.githubusercontent.com/jmnote/z-icons/master/svg/csharp.svg" width="40"
+                            height="40" />
+                        <img class="image-style" align="left"
+                            src="https://raw.githubusercontent.com/jmnote/z-icons/master/svg/java.svg" width="40"
+                            height="40" />
+                        <img class="image-style" align="left"
+                            src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/react/react.png"
+                            width="40" height="40" />
+                        <img class="image-style"
+                            src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-plain-wordmark.svg"
+                            width="40" height="40" align="left" />
+                        <img class="image-style"
+                            src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postgresql/postgresql-original-wordmark.svg"
+                            width="40" height="40" align="left" />
+                        <img class="image-style" align="left"
+                            src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/git/git.png"
+                            width="40" height="40" />
+                        <img class="image-style"
+                            src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/sourcetree/sourcetree-original-wordmark.svg"
+                            width="40" height="40" align="left" />
+
+                    </div>
+                </div>
+
             </div>
-        </td>
-        </tr>
-        </table>
-
-        <!-- <div class="home bd-grid" id="home">
-        <div class="home__data">
-            <h1 class="home__title">Hi,<br>I'am <span class="home__title-color">Coding Master</span><br> Web Developer
-            </h1>
-
-            <a href="#" class="button">Contact</a>
         </div>
-
-        <div class="home__social">
-            <a href="" class="home__social-icon"><i class='bx bxl-linkedin'></i></a>
-            <a href="" class="home__social-icon"><i class='bx bxl-behance'></i></a>
-            <a href="" class="home__social-icon"><i class='bx bxl-github'></i></a>
-        </div>
-
-        <div class="home__img">
-            <img src="/Images/Michaelcoreleone.jpg" alt="">
-        </div>
-    -->
-
-    </div>
 
 </body>
 
