--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
                 <div>
                     <h1>Reach out to me </h1>
                     <p>
+
+                        <a class="image-style" href="https://www.github.com/kenanbylan" target="blank"><img
+                                align="center" src="https://cdn.jsdelivr.net/npm/simple-icons@3.0.1/icons/github.svg"
+                                alt="Kenan Baylan" height="30" width="40" /></a>
+
                         <a class="image-style" href="https://www.linkedin.com/in/kenan-b-756ba8206/" target="blank"><img
                                 align="center" src="https://cdn.jsdelivr.net/npm/simple-icons@3.0.1/icons/linkedin.svg"
                                 alt="Kenan Baylan" height="30" width="40" /></a>
