--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="main-container">
             <div class="side-container">
                 <div class="photo-container">
-                    <img id="profile-img" src="./Images//profile.jpeg" alt="Kenan Baylan" />
+                    <img id="profile-img" src="./images/profile.jpeg" alt="Kenan Baylan" />
                 </div>
                 <div>
                     <h1>Reach out to me </h1>
@@ -107,3 +107,5 @@
 </body>
 
 </html>
+
+<!-- comment -->
