--- a/index.html
+++ b/index.html
@@ -9,6 +9,39 @@
     <script src="./js/index.js"></script>
 </head>
 
+<nav class="navigationWrapper">
+    <div class="logoWrapper">
+        <span class="stylish">Stylish</span>
+        <span class="logo">Logo</span>
+    </div>
+    <ul class="navigation">
+        <li class="parent"><a class="link" href="#">Home</a></li>
+        <li class="parent"><a class="link" href="#">About</a></li>
+        <li class="parent" id="clients">
+            <a class="link" href="#"><i class="fas fa-minus"></i> Clients <i class="fas fa-plus"></i></a>
+            <ul class="subnavigation">
+                <li><a class="link" href="#">Burger King</a></li>
+                <li><a class="link" href="#">Southwest Airlines</a></li>
+                <li><a class="link" href="#">Levi Strauss</a></li>
+            </ul>
+        </li>
+        <li class="parent" id="services">
+            <a class="link" href="#"><i class="fas fa-minus"></i> Services <i class="fas fa-plus"></i></a>
+            <ul class="subnavigation">
+                <li><a class="link" href="#">Print Design</a></li>
+                <li><a class="link" href="#">Web Design</a></li>
+                <li><a class="link" href="#">Mobile App Development</a></li>
+            </ul>
+        </li>
+        <li class="parent"><a class="link" href="#">Contact</a></li>
+    </ul>
+</nav>
+
+<a href="https://dribbble.com/shots/5844983-Sub-Nav-Interaction-Concept" class="signature" target="_blank">Designed by
+    Carson Monroe</a>
+
+<a class="signature" href="https://itsmenatalie.com" target="_blank">Created by ItsMeNatalie</a>
+
 <body>
 
     <section class="body-text">
@@ -102,9 +135,77 @@
                 </div>
 
             </div>
+
+
+
         </div>
 
+        <footer>
+            <div class="content">
+                <div class="top">
+                    <div class="logo-details">
+                        <i class="fab fa-slack"></i>
+                        <span class="logo_name">CodingLab</span>
+                    </div>
+                    <div class="media-icons">
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <a href="#"><i class="fab fa-youtube"></i></a>
+                    </div>
+                </div>
+                <div class="link-boxes">
+                    <ul class="box">
+                        <li class="link_name">Company</li>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#">Contact us</a></li>
+                        <li><a href="#">About us</a></li>
+                        <li><a href="#">Get started</a></li>
+                    </ul>
+                    <ul class="box">
+                        <li class="link_name">Services</li>
+                        <li><a href="#">App design</a></li>
+                        <li><a href="#">Web design</a></li>
+                        <li><a href="#">Logo design</a></li>
+                        <li><a href="#">Banner design</a></li>
+                    </ul>
+                    <ul class="box">
+                        <li class="link_name">Account</li>
+                        <li><a href="#">Profile</a></li>
+                        <li><a href="#">My account</a></li>
+                        <li><a href="#">Prefrences</a></li>
+                        <li><a href="#">Purchase</a></li>
+                    </ul>
+                    <ul class="box">
+                        <li class="link_name">Courses</li>
+                        <li><a href="#">HTML & CSS</a></li>
+                        <li><a href="#">JavaScript</a></li>
+                        <li><a href="#">Photography</a></li>
+                        <li><a href="#">Photoshop</a></li>
+                    </ul>
+                    <ul class="box input-box">
+                        <li class="link_name">Subscribe</li>
+                        <li><input type="text" placeholder="Enter your email"></li>
+                        <li><input type="button" value="Subscribe"></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="bottom-details">
+                <div class="bottom_text">
+                    <span class="copyright_text">Copyright © 2021 <a href="#">CodingLab.</a>All rights reserved</span>
+                    <span class="policy_terms">
+                        <a href="#">Privacy policy</a>
+                        <a href="#">Terms & condition</a>
+                    </span>
+                </div>
+            </div>
+        </footer>
+
+
+
 </body>
+
 
 </html>
 
