--- a/index.html
+++ b/index.html
@@ -1,212 +1,264 @@
 <!DOCTYPE html>
 <html lang="tr">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Profile</title>
     <link rel="stylesheet" href="./css/app.css" />
     <script src="./js/index.js"></script>
-</head>
+  </head>
 
-<nav class="navigationWrapper">
-    <div class="logoWrapper">
-        <span class="stylish">Stylish</span>
-        <span class="logo">Logo</span>
-    </div>
-    <ul class="navigation">
-        <li class="parent"><a class="link" href="#">Home</a></li>
-        <li class="parent"><a class="link" href="#">About</a></li>
-        <li class="parent" id="clients">
-            <a class="link" href="#"><i class="fas fa-minus"></i> Clients <i class="fas fa-plus"></i></a>
-            <ul class="subnavigation">
-                <li><a class="link" href="#">Burger King</a></li>
-                <li><a class="link" href="#">Southwest Airlines</a></li>
-                <li><a class="link" href="#">Levi Strauss</a></li>
-            </ul>
-        </li>
-        <li class="parent" id="services">
-            <a class="link" href="#"><i class="fas fa-minus"></i> Services <i class="fas fa-plus"></i></a>
-            <ul class="subnavigation">
-                <li><a class="link" href="#">Print Design</a></li>
-                <li><a class="link" href="#">Web Design</a></li>
-                <li><a class="link" href="#">Mobile App Development</a></li>
-            </ul>
-        </li>
-        <li class="parent"><a class="link" href="#">Contact</a></li>
-    </ul>
-</nav>
-
-<a href="https://dribbble.com/shots/5844983-Sub-Nav-Interaction-Concept" class="signature" target="_blank">Designed by
-    Carson Monroe</a>
-
-<a class="signature" href="https://itsmenatalie.com" target="_blank">Created by ItsMeNatalie</a>
-
-<body>
-
-    <section class="body-text">
-        <div class="main-container">
-            <div class="side-container">
-                <div class="photo-container">
-                    <img id="profile-img" src="./images/profile.jpeg" alt="Kenan Baylan" />
-                </div>
-                <div>
-                    <h1>Reach out to me </h1>
-                    <p>
-
-                        <a class="image-style" href="https://www.github.com/kenanbylan" target="blank"><img
-                                align="center" src="https://cdn.jsdelivr.net/npm/simple-icons@3.0.1/icons/github.svg"
-                                alt="Kenan Baylan" height="30" width="40" /></a>
-
-                        <a class="image-style" href="https://www.linkedin.com/in/kenan-b-756ba8206/" target="blank"><img
-                                align="center" src="https://cdn.jsdelivr.net/npm/simple-icons@3.0.1/icons/linkedin.svg"
-                                alt="Kenan Baylan" height="30" width="40" /></a>
-                        <a class="image-style" href="mailto: kenan.baylan4654@gmail.com"><img align="center"
-                                src="https://simpleicons.org/icons/gmail.svg" height="30" width="40" /></a>
-                        <a class="image-style"
-                            href="https://stackoverflow.com/users/14736137/kenan-baylan?tab=profile"><img align="center"
-                                src="https://simpleicons.org/icons/stackoverflow.svg" height="30" width="40" /></a>
-                        <a class="image-style" href="  https://medium.com/@kenan.baylan4654"><img align="center"
-                                src="https://simpleicons.org/icons/medium.svg" height="30" width="40" /></a>
-                    </p>
-                </div>
-            </div>
-
-            <div class="content-container">
-                <div class="sub-content">
-                    <h1>Kenan Baylan</h1>
-
-                </div>
-                <div class="sub-content">
-                    <h3>Summary</h3>
-                    </>
-                    <p>
-                        Hello, I'm Kenan, a 3rd year Computer Engineering student at Marmara University.
-                        I have learned many programming languages and algorithms throughout my school life, although I
-                        am not an expert in many of them, I have gained knowledge in every field. Frontend, Backend,
-                        Mobile Apps. , AL, ML etc.
-                        I love mobile application development and I am improving myself in mobile programming.
-                        I am currently continuing my education life and I am working on Swift programming language to be
-                        an ios developer.
-                    </p>
-                </div>
-                <div class="sub-content">
-                    <h2>Tech Use</h2>
-                    <div class="sub-title">
-
-                        <img class="image-style" align="left"
-                            src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/swift/swift-original.svg" width="40"
-                            height="40" />
-                        <img class="image-style" align="left"
-                            src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/javascript/javascript.png"
-                            width="40" height="40" />
-                        <img class="image-style" align="left"
-                            src="https://raw.githubusercontent.com/jmnote/z-icons/master/svg/python.svg" width="40"
-                            height="40" />
-                        <img class="image-style"
-                            src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-plain-wordmark.svg"
-                            width="40" height="40" align="left" />
-                        <img class="image-style" align="left"
-                            src="https://raw.githubusercontent.com/jmnote/z-icons/master/svg/c.svg" width="40"
-                            height="40" />
-                        <img class="image-style" align="left"
-                            src="https://raw.githubusercontent.com/jmnote/z-icons/master/svg/csharp.svg" width="40"
-                            height="40" />
-                        <img class="image-style" align="left"
-                            src="https://raw.githubusercontent.com/jmnote/z-icons/master/svg/java.svg" width="40"
-                            height="40" />
-                        <img class="image-style" align="left"
-                            src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/react/react.png"
-                            width="40" height="40" />
-                        <img class="image-style"
-                            src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-plain-wordmark.svg"
-                            width="40" height="40" align="left" />
-                        <img class="image-style"
-                            src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postgresql/postgresql-original-wordmark.svg"
-                            width="40" height="40" align="left" />
-                        <img class="image-style" align="left"
-                            src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/git/git.png"
-                            width="40" height="40" />
-                        <img class="image-style"
-                            src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/sourcetree/sourcetree-original-wordmark.svg"
-                            width="40" height="40" align="left" />
-
-                    </div>
-                </div>
-
-            </div>
-
-
-
+  <body>
+    <!-- !header start -->
+    <div class="topnav">
+        <div class="nav-left">
+            <h1>Kenan Baylan</h1>
         </div>
+        <div class="nav-right">
+            <a class="active" href="#home">Home</a>
+            <a href="#news">News</a>
+            <a href="#contact">Contact</a>
+            <a href="#about">About</a>
+        </div>
+        
+      </div>
+      <!-- !header end -->
+    <div class="main-container">
+      <div class="side-container">
+        <div class="photo-container">
+          <img
+            id="profile-img"
+            src="./images/profile.jpeg"
+            alt="Kenan Baylan"
+          />
+        </div>
+        <div>
+          <h1>Reach out to me</h1>
+          <p>
+            <a
+              class="image-style"
+              href="https://www.github.com/kenanbylan"
+              target="blank"
+              ><img
+                align="center"
+                src="https://cdn.jsdelivr.net/npm/simple-icons@3.0.1/icons/github.svg"
+                alt="Kenan Baylan"
+                height="30"
+                width="40"
+            /></a>
 
-        <footer>
-            <div class="content">
-                <div class="top">
-                    <div class="logo-details">
-                        <i class="fab fa-slack"></i>
-                        <span class="logo_name">CodingLab</span>
-                    </div>
-                    <div class="media-icons">
-                        <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
-                        <a href="#"><i class="fab fa-instagram"></i></a>
-                        <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                        <a href="#"><i class="fab fa-youtube"></i></a>
-                    </div>
-                </div>
-                <div class="link-boxes">
-                    <ul class="box">
-                        <li class="link_name">Company</li>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Contact us</a></li>
-                        <li><a href="#">About us</a></li>
-                        <li><a href="#">Get started</a></li>
-                    </ul>
-                    <ul class="box">
-                        <li class="link_name">Services</li>
-                        <li><a href="#">App design</a></li>
-                        <li><a href="#">Web design</a></li>
-                        <li><a href="#">Logo design</a></li>
-                        <li><a href="#">Banner design</a></li>
-                    </ul>
-                    <ul class="box">
-                        <li class="link_name">Account</li>
-                        <li><a href="#">Profile</a></li>
-                        <li><a href="#">My account</a></li>
-                        <li><a href="#">Prefrences</a></li>
-                        <li><a href="#">Purchase</a></li>
-                    </ul>
-                    <ul class="box">
-                        <li class="link_name">Courses</li>
-                        <li><a href="#">HTML & CSS</a></li>
-                        <li><a href="#">JavaScript</a></li>
-                        <li><a href="#">Photography</a></li>
-                        <li><a href="#">Photoshop</a></li>
-                    </ul>
-                    <ul class="box input-box">
-                        <li class="link_name">Subscribe</li>
-                        <li><input type="text" placeholder="Enter your email"></li>
-                        <li><input type="button" value="Subscribe"></li>
-                    </ul>
-                </div>
-            </div>
-            <div class="bottom-details">
-                <div class="bottom_text">
-                    <span class="copyright_text">Copyright © 2021 <a href="#">CodingLab.</a>All rights reserved</span>
-                    <span class="policy_terms">
-                        <a href="#">Privacy policy</a>
-                        <a href="#">Terms & condition</a>
-                    </span>
-                </div>
-            </div>
-        </footer>
+            <a
+              class="image-style"
+              href="https://www.linkedin.com/in/kenan-b-756ba8206/"
+              target="blank"
+              ><img
+                align="center"
+                src="https://cdn.jsdelivr.net/npm/simple-icons@3.0.1/icons/linkedin.svg"
+                alt="Kenan Baylan"
+                height="30"
+                width="40"
+            /></a>
+            <a class="image-style" href="mailto: kenan.baylan4654@gmail.com"
+              ><img
+                align="center"
+                src="https://simpleicons.org/icons/gmail.svg"
+                height="30"
+                width="40"
+            /></a>
+            <a
+              class="image-style"
+              href="https://stackoverflow.com/users/14736137/kenan-baylan?tab=profile"
+              ><img
+                align="center"
+                src="https://simpleicons.org/icons/stackoverflow.svg"
+                height="30"
+                width="40"
+            /></a>
+            <a class="image-style" href="  https://medium.com/@kenan.baylan4654"
+              ><img
+                align="center"
+                src="https://simpleicons.org/icons/medium.svg"
+                height="30"
+                width="40"
+            /></a>
+          </p>
+        </div>
+      </div>
 
+      <div class="content-container">
+        <div class="sub-content">
+          <h1>Kenan Baylan</h1>
+        </div>
+        <div class="sub-content">
+          <h3>Summary</h3>
+          <p>
+            Hello, I'm Kenan, a 3rd year Computer Engineering student at Marmara
+            University. I have learned many programming languages and algorithms
+            throughout my school life, although I am not an expert in many of
+            them, I have gained knowledge in every field. Frontend, Backend,
+            Mobile Apps. , AL, ML etc. I love mobile application development and
+            I am improving myself in mobile programming. I am currently
+            continuing my education life and I am working on Swift programming
+            language to be an ios developer.
+          </p>
+        </div>
+        <div class="sub-content">
+          <h2>Tech Use</h2>
+          <div class="sub-title">
+            <img
+              class="image-style"
+              align="left"
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/swift/swift-original.svg"
+              width="40"
+              height="40"
+            />
+            <img
+              class="image-style"
+              align="left"
+              src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/javascript/javascript.png"
+              width="40"
+              height="40"
+            />
+            <img
+              class="image-style"
+              align="left"
+              src="https://raw.githubusercontent.com/jmnote/z-icons/master/svg/python.svg"
+              width="40"
+              height="40"
+            />
+            <img
+              class="image-style"
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-plain-wordmark.svg"
+              width="40"
+              height="40"
+              align="left"
+            />
+            <img
+              class="image-style"
+              align="left"
+              src="https://raw.githubusercontent.com/jmnote/z-icons/master/svg/c.svg"
+              width="40"
+              height="40"
+            />
+            <img
+              class="image-style"
+              align="left"
+              src="https://raw.githubusercontent.com/jmnote/z-icons/master/svg/csharp.svg"
+              width="40"
+              height="40"
+            />
+            <img
+              class="image-style"
+              align="left"
+              src="https://raw.githubusercontent.com/jmnote/z-icons/master/svg/java.svg"
+              width="40"
+              height="40"
+            />
+            <img
+              class="image-style"
+              align="left"
+              src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/react/react.png"
+              width="40"
+              height="40"
+            />
+            <img
+              class="image-style"
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-plain-wordmark.svg"
+              width="40"
+              height="40"
+              align="left"
+            />
+            <img
+              class="image-style"
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postgresql/postgresql-original-wordmark.svg"
+              width="40"
+              height="40"
+              align="left"
+            />
+            <img
+              class="image-style"
+              align="left"
+              src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/git/git.png"
+              width="40"
+              height="40"
+            />
+            <img
+              class="image-style"
+              src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/sourcetree/sourcetree-original-wordmark.svg"
+              width="40"
+              height="40"
+              align="left"
+            />
+          </div>
+        </div>
+      </div>
+    </div>
 
-
-</body>
-
-
+    <footer>
+      <div class="content">
+        <div class="top">
+          <div class="logo-details">
+            <i class="fab fa-slack"></i>
+            <span class="logo_name">CodingLab</span>
+          </div>
+          <div class="media-icons">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            <a href="#"><i class="fab fa-youtube"></i></a>
+          </div>
+        </div>
+        <div class="link-boxes">
+          <ul class="box">
+            <li class="link_name">Company</li>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Contact us</a></li>
+            <li><a href="#">About us</a></li>
+            <li><a href="#">Get started</a></li>
+          </ul>
+          <ul class="box">
+            <li class="link_name">Services</li>
+            <li><a href="#">App design</a></li>
+            <li><a href="#">Web design</a></li>
+            <li><a href="#">Logo design</a></li>
+            <li><a href="#">Banner design</a></li>
+          </ul>
+          <ul class="box">
+            <li class="link_name">Account</li>
+            <li><a href="#">Profile</a></li>
+            <li><a href="#">My account</a></li>
+            <li><a href="#">Prefrences</a></li>
+            <li><a href="#">Purchase</a></li>
+          </ul>
+          <ul class="box">
+            <li class="link_name">Courses</li>
+            <li><a href="#">HTML & CSS</a></li>
+            <li><a href="#">JavaScript</a></li>
+            <li><a href="#">Photography</a></li>
+            <li><a href="#">Photoshop</a></li>
+          </ul>
+          <ul class="box input-box">
+            <li class="link_name">Subscribe</li>
+            <li><input type="text" placeholder="Enter your email" /></li>
+            <li><input type="button" value="Subscribe" /></li>
+          </ul>
+        </div>
+      </div>
+      <div class="bottom-details">
+        <div class="bottom_text">
+          <span class="copyright_text"
+            >Copyright © 2021 <a href="#">CodingLab.</a>All rights
+            reserved</span
+          >
+          <span class="policy_terms">
+            <a href="#">Privacy policy</a>
+            <a href="#">Terms & condition</a>
+          </span>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
 
 <!-- comment -->
