--- a/index.html
+++ b/index.html
@@ -36,131 +36,18 @@
               src="https://cdn.jsdelivr.net/npm/simple-icons@3.0.1/icons/github.svg" alt="Kenan Baylan" height="30"
               width="40" /></a>
 
-        <footer>
-          <div class="content">
-            <div class="top">
-              <div class="logo-details">
-                <i class="fab fa-slack"></i>
-                <span class="logo_name">CodingLab</span>
-              </div>
-              <div class="media-icons">
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                <a href="#"><i class="fab fa-youtube"></i></a>
-              </div>
-            </div>
-            <div class="link-boxes">
-              <ul class="box">
-                <li class="link_name">Company</li>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Contact us</a></li>
-                <li><a href="#">About us</a></li>
-                <li><a href="#">Get started</a></li>
-              </ul>
-              <ul class="box">
-                <li class="link_name">Services</li>
-                <li><a href="#">App design</a></li>
-                <li><a href="#">Web design</a></li>
-                <li><a href="#">Logo design</a></li>
-                <li><a href="#">Banner design</a></li>
-              </ul>
-              <ul class="box">
-                <li class="link_name">Account</li>
-                <li><a href="#">Profile</a></li>
-                <li><a href="#">My account</a></li>
-                <li><a href="#">Prefrences</a></li>
-                <li><a href="#">Purchase</a></li>
-              </ul>
-              <ul class="box">
-                <li class="link_name">Courses</li>
-                <li><a href="#">HTML & CSS</a></li>
-                <li><a href="#">JavaScript</a></li>
-                <li><a href="#">Photography</a></li>
-                <li><a href="#">Photoshop</a></li>
-              </ul>
-              <ul class="box input-box">
-                <li class="link_name">Subscribe</li>
-                <li><input type="text" placeholder="Enter your email"></li>
-                <li><input type="button" value="Subscribe"></li>
-              </ul>
-            </div>
-          </div>
-          <div class="bottom-details">
-            <div class="bottom_text">
-              <span class="copyright_text">Copyright © 2021 <a href="#">CodingLab.</a>All rights reserved</span>
-              <span class="policy_terms">
-                <a href="#">Privacy policy</a>
-                <a href="#">Terms & condition</a>
-              </span>
-            </div>
-          </div>
-        </footer>
-
-        <footer>
-          <div class="content">
-            <div class="top">
-              <div class="logo-details">
-                <i class="fab fa-slack"></i>
-                <span class="logo_name">CodingLab</span>
-              </div>
-              <div class="media-icons">
-                <a href="#"><i class="fab fa-facebook-f"></i></a>
-                <a href="#"><i class="fab fa-twitter"></i></a>
-                <a href="#"><i class="fab fa-instagram"></i></a>
-                <a href="#"><i class="fab fa-linkedin-in"></i></a>
-                <a href="#"><i class="fab fa-youtube"></i></a>
-              </div>
-            </div>
-            <div class="link-boxes">
-              <ul class="box">
-                <li class="link_name">Company</li>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Contact us</a></li>
-                <li><a href="#">About us</a></li>
-                <li><a href="#">Get started</a></li>
-              </ul>
-              <ul class="box">
-                <li class="link_name">Services</li>
-                <li><a href="#">App design</a></li>
-                <li><a href="#">Web design</a></li>
-                <li><a href="#">Logo design</a></li>
-                <li><a href="#">Banner design</a></li>
-              </ul>
-              <ul class="box">
-                <li class="link_name">Account</li>
-                <li><a href="#">Profile</a></li>
-                <li><a href="#">My account</a></li>
-                <li><a href="#">Prefrences</a></li>
-                <li><a href="#">Purchase</a></li>
-              </ul>
-              <ul class="box">
-                <li class="link_name">Courses</li>
-                <li><a href="#">HTML & CSS</a></li>
-                <li><a href="#">JavaScript</a></li>
-                <li><a href="#">Photography</a></li>
-                <li><a href="#">Photoshop</a></li>
-              </ul>
-              <ul class="box input-box">
-                <li class="link_name">Subscribe</li>
-                <li><input type="text" placeholder="Enter your email"></li>
-                <li><input type="button" value="Subscribe"></li>
-              </ul>
-            </div>
-          </div>
-          <div class="bottom-details">
-            <div class="bottom_text">
-              <span class="copyright_text">Copyright © 2021 <a href="#">CodingLab.</a>All rights reserved</span>
-              <span class="policy_terms">
-                <a href="#">Privacy policy</a>
-                <a href="#">Terms & condition</a>
-              </span>
-            </div>
-          </div>
-        </footer>
-
-
+          <a class="image-style" href="https://www.linkedin.com/in/kenan-b-756ba8206/" target="blank"><img
+              align="center" src="https://cdn.jsdelivr.net/npm/simple-icons@3.0.1/icons/linkedin.svg" alt="Kenan Baylan"
+              height="30" width="40" /></a>
+          <a class="image-style" href="mailto: kenan.baylan4654@gmail.com"><img align="center"
+              src="https://simpleicons.org/icons/gmail.svg" height="30" width="40" /></a>
+          <a class="image-style" href="https://stackoverflow.com/users/14736137/kenan-baylan?tab=profile"><img
+              align="center" src="https://simpleicons.org/icons/stackoverflow.svg" height="30" width="40" /></a>
+          <a class="image-style" href="  https://medium.com/@kenan.baylan4654"><img align="center"
+              src="https://simpleicons.org/icons/medium.svg" height="30" width="40" /></a>
+        </p>
+      </div>
+    </div>
 
 
 
@@ -225,15 +112,9 @@
     <div class="top">
       <div class="logo-details">
         <i class="fab fa-slack"></i>
-        <span class="logo_name">CodingLab</span>
+        <span class="logo_name">Portfolio</span>
       </div>
-      <div class="media-icons">
-        <a href="#"><i class="fab fa-facebook-f"></i></a>
-        <a href="#"><i class="fab fa-twitter"></i></a>
-        <a href="#"><i class="fab fa-instagram"></i></a>
-        <a href="#"><i class="fab fa-linkedin-in"></i></a>
-        <a href="#"><i class="fab fa-youtube"></i></a>
-      </div>
+
     </div>
     <div class="link-boxes">
       <ul class="box">
@@ -265,21 +146,11 @@
         <li><a href="#">Photoshop</a></li>
       </ul>
       <ul class="box input-box">
-        <li class="link_name">Subscribe</li>
-        <li><input type="text" placeholder="Enter your email" /></li>
-        <li><input type="button" value="Subscribe" /></li>
       </ul>
     </div>
   </div>
   <div class="bottom-details">
-    <div class="bottom_text">
-      <span class="copyright_text">Copyright © 2021 <a href="#">CodingLab.</a>All rights
-        reserved</span>
-      <span class="policy_terms">
-        <a href="#">Privacy policy</a>
-        <a href="#">Terms & condition</a>
-      </span>
-    </div>
+
   </div>
 </footer>
 </body>
