--- a/index.html
+++ b/index.html
@@ -112,13 +112,13 @@
     <div class="top">
       <div class="logo-details">
         <i class="fab fa-slack"></i>
-        <span class="logo_name">Portfolio</span>
+        <span class="logo_name">Portfolio Kenan</span>
       </div>
 
     </div>
     <div class="link-boxes">
       <ul class="box">
-        <li class="link_name">Company</li>
+        <li class="link_name">My Profile</li>
         <li><a href="#">Home</a></li>
         <li><a href="#">Contact us</a></li>
         <li><a href="#">About us</a></li>
@@ -126,10 +126,10 @@
       </ul>
       <ul class="box">
         <li class="link_name">Services</li>
-        <li><a href="#">App design</a></li>
-        <li><a href="#">Web design</a></li>
-        <li><a href="#">Logo design</a></li>
-        <li><a href="#">Banner design</a></li>
+        <li><a href="#">iOS Apps.</a></li>
+        <li><a href="#">React native</a></li>
+        <li><a href="#">Node js</a></li>
+        <li><a href="#">.Net Core</a></li>
       </ul>
       <ul class="box">
         <li class="link_name">Account</li>
@@ -142,8 +142,8 @@
         <li class="link_name">Courses</li>
         <li><a href="#">HTML & CSS</a></li>
         <li><a href="#">JavaScript</a></li>
-        <li><a href="#">Photography</a></li>
-        <li><a href="#">Photoshop</a></li>
+        <li><a href="#">React </a></li>
+        <li><a href="#">Figma</a></li>
       </ul>
       <ul class="box input-box">
       </ul>
