web site is edit and bug fixed.

--- a/index.html
+++ b/index.html
@@ -1,160 +1,286 @@
 <!DOCTYPE html>
-<html lang="tr">
+<html lang="en">
 
 <head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <title>Profile</title>
-  <link rel="stylesheet" href="./css/app.css" />
-  <script src="./js/index.js"></script>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Kenan Baylan iOS Dev. </title>
+
+  <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="./assets/css/aos.css">
+  <link rel="stylesheet" href="./assets/css/line-awesome.css">
+  <link rel="stylesheet" href="./assets/css/style.css">
 </head>
 
-<body>
-  <!-- !header start -->
-  <div class="topnav">
-    <div class="nav-left">
-      <h1>Kenan Baylan</h1>
-    </div>
-    <div class="nav-right">
-      <a class="active" href="#home">Home</a>
-      <a href="#news">News</a>
-      <a href="#contact">Contact</a>
-      <a href="#about">About</a>
-    </div>
+<body data-bs-spy="scroll" data-bs-target="#.navbar">
 
-  </div>
-  <!-- !header end -->
-  <div class="main-container">
-    <div class="side-container">
-      <div class="photo-container">
-        <img id="profile-img" src="./images/profile.jpeg" alt="Kenan Baylan" />
+  <!-- NAV BAR -->
+  <nav class="navbar navbar-expand-lg  navbar-dark  fixed-top">
+    <div class="container flex-lg-column">
+      <a class="navbar-brand mx-lg-auto mb-lg-4" href="#">
+        <span class="h3 fw-bold d-block d-lg-none">
+          Kenan Baylan
+        </span>
+        <img src="./assets/images/profile.jpeg" class="d-none d-lg-block rounded-4" alt="Kenan Baylan">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav ms-auto flex-lg-column text-lg-center ">
+          <li class="nav-item">
+            <a class="nav-link" href="#home">Home</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#services">Services</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#work">Work</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#about">About</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#reviews">Reviews</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#blog">Blog</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="#contact">Contact</a>
+          </li>
+
+        </ul>
       </div>
-      <div>
-        <h1>Reach out to me</h1>
-        <p>
-          <a class="image-style" href="https://www.github.com/kenanbylan" target="blank"><img align="center"
-              src="https://cdn.jsdelivr.net/npm/simple-icons@3.0.1/icons/github.svg" alt="Kenan Baylan" height="30"
-              width="40" /></a>
-
-          <a class="image-style" href="https://www.linkedin.com/in/kenan-b-756ba8206/" target="blank"><img
-              align="center" src="https://cdn.jsdelivr.net/npm/simple-icons@3.0.1/icons/linkedin.svg" alt="Kenan Baylan"
-              height="30" width="40" /></a>
-          <a class="image-style" href="mailto: kenan.baylan4654@gmail.com"><img align="center"
-              src="https://simpleicons.org/icons/gmail.svg" height="30" width="40" /></a>
-          <a class="image-style" href="https://stackoverflow.com/users/14736137/kenan-baylan?tab=profile"><img
-              align="center" src="https://simpleicons.org/icons/stackoverflow.svg" height="30" width="40" /></a>
-          <a class="image-style" href="  https://medium.com/@kenan.baylan4654"><img align="center"
-              src="https://simpleicons.org/icons/medium.svg" height="30" width="40" /></a>
-        </p>
-      </div>
     </div>
 
+  </nav>
+  <!-- /NAV BAR -->
 
 
-</body>
-
-<div class="content-container">
-  <div class="sub-content">
-    <h1>Kenan Baylan</h1>
-  </div>
-  <div class="sub-content">
-    <h3>Summary</h3>
-    <p>
-      Hello, I'm Kenan, a 3rd year Computer Engineering student at Marmara
-      University. I have learned many programming languages and algorithms
-      throughout my school life, although I am not an expert in many of
-      them, I have gained knowledge in every field. Frontend, Backend,
-      Mobile Apps. , AL, ML etc. I love mobile application development and
-      I am improving myself in mobile programming. I am currently
-      continuing my education life and I am working on Swift programming
-      language to be an ios developer.
-    </p>
-  </div>
-  <div class="sub-content">
-    <h2>Tech Use</h2>
-    <div class="sub-title">
-      <img class="image-style" align="left"
-        src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/swift/swift-original.svg" width="40" height="40" />
-      <img class="image-style" align="left"
-        src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/javascript/javascript.png"
-        width="40" height="40" />
-      <img class="image-style" align="left" src="https://raw.githubusercontent.com/jmnote/z-icons/master/svg/python.svg"
-        width="40" height="40" />
-      <img class="image-style" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/nodejs/nodejs-plain-wordmark.svg"
-        width="40" height="40" align="left" />
-      <img class="image-style" align="left" src="https://raw.githubusercontent.com/jmnote/z-icons/master/svg/c.svg"
-        width="40" height="40" />
-      <img class="image-style" align="left" src="https://raw.githubusercontent.com/jmnote/z-icons/master/svg/csharp.svg"
-        width="40" height="40" />
-      <img class="image-style" align="left" src="https://raw.githubusercontent.com/jmnote/z-icons/master/svg/java.svg"
-        width="40" height="40" />
-      <img class="image-style" align="left"
-        src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/react/react.png"
-        width="40" height="40" />
-      <img class="image-style" src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-plain-wordmark.svg"
-        width="40" height="40" align="left" />
-      <img class="image-style"
-        src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/postgresql/postgresql-original-wordmark.svg" width="40"
-        height="40" align="left" />
-      <img class="image-style" align="left"
-        src="https://raw.githubusercontent.com/github/explore/80688e429a7d4ef2fca1e82350fe8e3517d3494d/topics/git/git.png"
-        width="40" height="40" />
-      <img class="image-style"
-        src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/sourcetree/sourcetree-original-wordmark.svg" width="40"
-        height="40" align="left" />
-    </div>
-  </div>
-</div>
-</div>
-
-<footer>
-  <div class="content">
-    <div class="top">
-      <div class="logo-details">
-        <i class="fab fa-slack"></i>
-        <span class="logo_name">Portfolio Kenan</span>
+  <!-- Content Wrapper. -->
+  <div id="content-wrapper">
+    <!-- HOME -->
+    <section id="home" class="full-height  px-lg-5">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-8">
+            <h1 class="display-4 fw-bold" data-aos="fade-up">A passionate <span class="text-brand ">iOS developer</span>
+              from
+              Istanbul
+            </h1>
+            <p class="lead mt-2 mb-4" data-aos="fade-up" data-aos-delay="300">I love mobile application development and
+              I'm
+              learning Swift to
+              become an ios
+              developer.</p>
+            <div data-aos="fade-up" data-aos-delay="600">
+              <a href="#work" class="btn btn-brand me-3">Explore My Work</a>
+              <a href="#" class="custom-link">Email: kenan.baylan4654@gmail.com</a>
+            </div>
+          </div>
+        </div>
       </div>
 
-    </div>
-    <div class="link-boxes">
-      <ul class="box">
-        <li class="link_name">My Profile</li>
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Contact us</a></li>
-        <li><a href="#">About us</a></li>
-        <li><a href="#">Get started</a></li>
-      </ul>
-      <ul class="box">
-        <li class="link_name">Services</li>
-        <li><a href="#">iOS Apps.</a></li>
-        <li><a href="#">React native</a></li>
-        <li><a href="#">Node js</a></li>
-        <li><a href="#">.Net Core</a></li>
-      </ul>
-      <ul class="box">
-        <li class="link_name">Account</li>
-        <li><a href="#">Profile</a></li>
-        <li><a href="#">My account</a></li>
-        <li><a href="#">Prefrences</a></li>
-        <li><a href="#">Purchase</a></li>
-      </ul>
-      <ul class="box">
-        <li class="link_name">Courses</li>
-        <li><a href="#">HTML & CSS</a></li>
-        <li><a href="#">JavaScript</a></li>
-        <li><a href="#">React </a></li>
-        <li><a href="#">Figma</a></li>
-      </ul>
-      <ul class="box input-box">
-      </ul>
-    </div>
-  </div>
-  <div class="bottom-details">
+
+    </section>
+    <!-- /HOME -->
+
+    <!-- SERVİCES -->
+
+    <section id="services" class="full-height px-lg-5 ">
+      <div class="container">
+        <div class="row pb-4" data-aos="fade-up">
+          <div class="col-lg-8">
+            <h6 class="text-brand">SERVICES</h6>
+            <h1>Services That I Provide</h1>
+          </div>
+        </div>
+        <div class="row gy-4" data-aos="fade-up" data-aos-delay="300">
+
+          <div class="col-md-4">
+            <div class="service p-4 bg-base rounded-4 shadow-effect">
+              <div class="iconbox rounded-4">
+                <i class="las la-feather"></i>
+              </div>
+              <h5 class="mt-2 mb-2">Branding</h5>
+              <p>👨‍💻 I am also learning Nodejs to learn backend technologies. </p>
+              <a href="#" class="custom-link">Read more</a>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="service p-4 bg-base rounded-4 shadow-effect">
+              <div class="iconbox rounded-4">
+                <i class="las la-ruler"></i>
+              </div>
+              <h5 class="mt-2 mb-2">Backend Development</h5>
+              <p>I can develop backend technologies using Node js.</p>
+              <a href="#" class="custom-link">Read more</a>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="service p-4 bg-base rounded-4 shadow-effect">
+              <div class="iconbox rounded-4">
+                <i class="las la-mobile"></i>
+              </div>
+              <h5 class="mt-2 mb-2">iOS Development</h5>
+              <p>Up-to-date and user-friendly applications suitable for the iOS platform.</p>
+              <a href="#" class="custom-link">Read more</a>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+
+    </section>
+    <!-- /SERVİCES -->
+
+
+    <!-- WORK -->
+    <section id="work" class="full-height px-lg-5">
+      <div class="container">
+        <div class="row pb-4" data-aos="fade-up">
+          <div class="col-lg-8">
+            <h6 class="text-brand">WORK</h6>
+            <h1>My Recent Projects</h1>
+          </div>
+
+        </div>
+
+      </div>
+
+      <div class="row gy-4" data-aos="fade-up" data-aos-delay="300">
+        <div class="col-md-4">
+          <div class="card-custom rounded-4 bg-base shadow-effect">
+            <div class="card-custom-image rounded-4">
+              <img class="rounded-4" src="./assets/images/project-1.jpg" alt="rickAndMorty">
+            </div>
+            <div class="card-custom-content p-4 ">
+              <h4>Rick and Morty</h4>
+              <p>Innovation that exceeds expectations. Astra is a true template equiqe.</p>
+              <a href="#" class="custom-link">Read more</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 ">
+          <div class="card-custom rounded-4 bg-base shadow-effect">
+            <div class="card-custom-image rounded-4">
+              <img class="rounded-4" src="./assets/images/project-2.png" alt="rickAndMorty">
+            </div>
+            <div class="card-custom-content p-4 ">
+              <h4>Netflix Clone</h4>
+              <p>Innovation that exceeds expectations. Astra is a true template equiqe.</p>
+              <a href="#" class="custom-link">Read more</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 ">
+          <div class="card-custom rounded-4 bg-base shadow-effect">
+            <div class="card-custom-image rounded-4">
+              <img class="rounded-4" src="./assets/images/project-3.png" alt="rickAndMorty">
+            </div>
+            <div class="card-custom-content p-4 ">
+              <h4>Netflix Clone</h4>
+              <p>Innovation that exceeds expectations. Astra is a true template equiqe.</p>
+              <a href="#" class="custom-link">Read more</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-md-4 ">
+          <div class="card-custom rounded-4 bg-base shadow-effect">
+            <div class="card-custom-image rounded-4">
+              <img class="rounded-4" src="./assets/images/project-4.png" alt="rickAndMorty">
+            </div>
+            <div class="card-custom-content p-4 ">
+              <h4>Netflix Clone</h4>
+              <p>Innovation that exceeds expectations. Astra is a true template equiqe.</p>
+              <a href="#" class="custom-link">Read more</a>
+            </div>
+          </div>
+        </div>
+
+
+      </div>
+
+    </section>
+    <!-- /WORK -->
+
+    <!-- ABOUT -->
+
+    <section id="about" class="full-height px-lg-5">
+      <div class="container">
+        <div class="row pb-4" data-aos="fade-up">
+          <div class="col-lg-8">
+            <h6 class="text-brand">ABOUT</h6>
+            <h1>My Education & Experience</h1>
+          </div>
+        </div>
+
+        <div class="row gy-5" data-aos="fade-up" data-aos-delay="300">
+
+          <div class="col-lg-6">
+            <h4 class="mb-4">Education</h4>
+            <div class="row gy-4">
+              <div class="col-12">
+                <div class="bg-base p-4 rounded-4 shadow-effect">
+                  <h5>Computer Engineering</h5>
+                  <p class="text-brand">Marmara University (2020 - 2024)</p>
+                  <p> ipsum sit All we are more and design lorem ipsum dolor creativity sit</p>
+                </div>
+              </div>
+              <div class="col-12">
+                <div class="bg-base p-4 rounded-4 shadow-effect">
+                  <h5>Computer Engineering</h5>
+                  <p class="text-brand mb-2">Marmara University (2020 - 2024)</p>
+                  <p class="mb-0">sit All we are more and design lorem ipsum dolor creativity
+                    sit</p>
+                </div>
+              </div>
+
+
+            </div>
+          </div>
+
+          <div class="col-lg-6">
+            <h4 class="mb-4">Experience</h4>
+            <div class="row gy-4">
+              <div class="col-12">
+                <div class="bg-base p-4 rounded-4 shadow-effect">
+                  <h5>Intern Mobile Developer</h5>
+                  <p class="text-brand">Digitect Software Technologies (Feb. - Octo 2022)</p>
+                  <p> ipsum sit All we are more and design lorem ipsum dolor creativity sit</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+        </div>
+
+
+      </div>
+    </section>
+
+
+
+
+
+
 
   </div>
-</footer>
+  <!-- /Content Wrapper. -->
+
+
+  <script src="./assets/js/aos.js"></script>
+  <script src="./assets/js/bootstrap.bundle.min.js"></script>
+  <script src="./assets/js/main.js"></script>
 </body>
 
 </html>
-
-<!-- comment -->
