--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                   <h5>Computer Engineering</h5>
                   <p class="text-brand">Marmara University (2020 - 2024)</p>
                   <p> ipsum sit All we are more and design lorem ipsum dolor creativity sit</p>
-                </div>
+                </div>xw
               </div>
               <div class="col-12">
                 <div class="bg-base p-4 rounded-4 shadow-effect">
