--- a/index.html
+++ b/index.html
@@ -43,9 +43,6 @@
             <a class="nav-link" href="#about">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#reviews">Reviews</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link" href="#blog">Blog</a>
           </li>
           <li class="nav-item">
@@ -227,6 +224,7 @@
         <div class="row gy-5" data-aos="fade-up" data-aos-delay="300">
 
           <div class="col-lg-6">
+            <!-- Education -->
             <h4 class="mb-4">Education</h4>
             <div class="row gy-4">
               <div class="col-12">
@@ -234,7 +232,7 @@
                   <h5>Computer Engineering</h5>
                   <p class="text-brand">Marmara University (2020 - 2024)</p>
                   <p> ipsum sit All we are more and design lorem ipsum dolor creativity sit</p>
-                </div>xw
+                </div>
               </div>
               <div class="col-12">
                 <div class="bg-base p-4 rounded-4 shadow-effect">
@@ -245,10 +243,10 @@
                 </div>
               </div>
 
-
             </div>
           </div>
 
+          <!-- Experience -->
           <div class="col-lg-6">
             <h4 class="mb-4">Experience</h4>
             <div class="row gy-4">
@@ -264,9 +262,137 @@
 
         </div>
 
-
       </div>
     </section>
+    <!-- /ABOUT -->
+
+    <!-- BLOG -->
+    <section id="blog" class="full-height px-lg-5 ">
+      <div class="container">
+        <div class="row pb-4" data-aos="fade-up">
+          <div class="col-lg-8">
+            <h6 class="text-brand">BLOG</h6>
+            <h1>My Blog Posts</h1>
+          </div>
+        </div>
+
+        <div class="row gy-4" data-aos="fade-up" data-aos-delay="300">
+          <div class="col-md-4">
+            <div class="card-custom rounded-4 bg-base ">
+              <div class="card-custom-image rounded-4">
+                <img class="rounded-4" src="./assets/images/blog-post-1.jpg" alt="rickAndMorty">
+              </div>
+              <div class="card-custom-content p-4 ">
+                <p class="text-brand">20 Dec, 2022</p>
+                <h4>iOS Apps Auto-layout</h4>
+                <p>You can visit my medium article about autolayout by clicking here.</p>
+                <a href="#" class="custom-link">Read more</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="card-custom rounded-4 bg-base ">
+              <div class="card-custom-image rounded-4">
+                <img class="rounded-4" src="./assets/images/blog-post-2.jpg" alt="rickAndMorty">
+              </div>
+              <div class="card-custom-content p-4 ">
+                <p class="text-brand">20 Dec, 2022</p>
+                <h4>iOS Apps Auto-layout</h4>
+                <p>You can visit my medium article about autolayout by clicking here.</p>
+                <a href="#" class="custom-link">Read more</a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="card-custom rounded-4 bg-base ">
+              <div class="card-custom-image rounded-4">
+                <img class="rounded-4" src="./assets/images/blog-post-3.jpg" alt="rickAndMorty">
+              </div>
+              <div class="card-custom-content p-4 ">
+                <p class="text-brand">20 Dec, 2022</p>
+                <h4>iOS Apps Auto-layout</h4>
+                <p>You can visit my medium article about autolayout by clicking here.</p>
+                <a href="#" class="custom-link">Read more</a>
+              </div>
+            </div>
+          </div>
+
+
+
+        </div>
+      </div>
+
+    </section>
+    <!-- /BLOG -->
+
+    <!-- CONTACT -->
+
+    <section id="contact" class="full-height px-lg-5 ">
+      <div class="container">
+        <div class="row  justify-content-center text-center" data-aos="fade-up">
+          <div class="col-lg-8 pb-4">
+            <h6 class="text-brand">CONTACT</h6>
+            <h1>Reach Me! Interested in working together? Let's talk</h1>
+          </div>
+
+          <div class="col-lg-8">
+            <form action="#" class="row g-lg-3 gy-3">
+              <div class="form-group col-md-6">
+                <input type="text" class="form-control" placeholder=" your name">
+              </div>
+              <div class="form-group col-md-6">
+                <input type="email" class="form-control" placeholder="enter your email">
+              </div>
+              <div class="form-group col-12">
+                <input type="text" class="form-control" placeholder="enter subject">
+              </div>
+              <div class="form-group col-12">
+                <textarea name="" id="" cols="3" rows="5" class="form-control"
+                  placeholder="enter your message"></textarea>
+              </div>
+              <div class="form-group col-12 d-grid">
+                <button class="btn btn-brand" type="submit">React me </button>
+              </div>
+
+            </form>
+          </div>
+
+        </div>
+      </div>
+
+    </section>
+
+    <!-- /CONTACT -->
+
+
+
+    <!-- FOOTER -->
+    <footer class="py-5 px-lg-5">
+      <div class="container">
+        <div class="row gy-4 justify-content-between  ">
+          <div class="col-auto">
+            <p class="mb-0">Copyright 2023 | Kenan Baylan</p>
+          </div>
+          <div class="col-auto">
+            <div class="social-icons">
+              <a href="#"><i class="lab la-twitter "></i></a>
+              <a href="#"><i class="lab la-github"></i></a>
+              <a href="#"><i class="lab la-stack-overflow"></i></a>
+              <a href="#"><i class="lab la-linkedin"></i></a>
+            </div>
+
+          </div>
+
+
+        </div>
+
+      </div>
+    </footer>
+
+    <!-- /FOOTER -->
+
 
 
 
